WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300557
Fix instance variable leaks of WKRequestDataResult and _WKNowPlayingMetadata
https://bugs.webkit.org/show_bug.cgi?id=300557
Summary
Fix instance variable leaks of WKRequestDataResult and _WKNowPlayingMetadata
David Kilzer (:ddkilzer)
Reported
2025-10-11 11:39:38 PDT
Fix instance variable leaks of WKRequestDataResult and _WKNowPlayingMetadata due to missing -dealloc methods. Found by clang static analyzer.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-11 11:39:50 PDT
<
rdar://problem/162440921
>
David Kilzer (:ddkilzer)
Comment 2
2025-10-11 11:50:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52178
EWS
Comment 3
2025-10-11 14:51:12 PDT
Committed
301364@main
(9a38ea514aa2): <
https://commits.webkit.org/301364@main
> Reviewed commits have been landed. Closing PR #52178 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug