Fix instance variable leaks of WKRequestDataResult and _WKNowPlayingMetadata <https://bugs.webkit.org/show_bug.cgi?id=300557> <rdar://162440921>

Reviewed by Geoffrey Garen.

Add missing -dealloc methods to fix instance variable leaks.

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[_WKNowPlayingMetadata dealloc]): Add.
* Source/WebKit/UIProcess/DigitalCredentials/WKDigitalCredentialsPicker.mm:
(-[WKRequestDataResult initWithRequestDataBytes:protocol:]):
- Fix missing retain of _requestDataBytes when assigning
  requestDataBytes method parameter.
(-[WKRequestDataResult dealloc]): Add.

Canonical link: https://commits.webkit.org/301364@main